--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Hello world</p>
-    <p>This is a new Feature</p>
+    <p>This is a new Feature (Dropdown)</p>
 </body>
 </html>
