--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>Hello world</p>
     <p>This is a new Feature (Button)</p>
+    <p>This is a new Feature (New Button)</p>
 </body>
 </html>
